# icfpc2020

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  dist_to_good.npz  run.sh  submit.sh
app/: main.cpp
src/app/: main.cpp
src/app2/: main.cpp
src/common/linear_algebra/bool/: vector.h
src/mfs/: TODO.md  dictionary.cpp  dictionary.h  evaluation.cpp  evaluation.h  expression.cpp  expression.h  function.cpp  function.h  function_type.h  glyph.cpp  glyph.h  glyph_compact.h  glyph_decoder.cpp  glyph_decoder.h  glyph_type.h  line.cpp  line.h  linear_encoded_form.cpp  linear_encoded_form.h  main.cpp  matrix_slice.h  message.cpp  message.h  message_as_image.cpp  message_as_image.h  message_as_text.cpp  message_decoder.cpp  message_decoder.h  node.cpp  node.h  stable_orbits.cpp  test.cpp
src/mfs/messages/: test.txt
src/python_eval/: app.py  autorunner.py  constants.py  interaction.py  modulate.py  old_strategies.py  orbit_util.py  orbiter.py  parser.py  states.py  swarmer.py
src/solver/: main.cpp
src/stb/: wrapper.cpp  wrapper.h
src/stb/sample/: sample.cpp
