cmake_minimum_required( VERSION 3.5 )
project( competitions )
if (APPLE)
    set(CMAKE_C_COMPILER /usr/local/bin/gcc-9)
    set(CMAKE_CXX_COMPILER /usr/local/bin/g++-9)
endif (APPLE)
string( TOLOWER ${CMAKE_BUILD_TYPE} BUILD_TYPE_LOWERCASE )
set( CMAKE_CXX_STANDARD 14 )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_HOME_DIRECTORY}/${BUILD_TYPE_LOWERCASE}/build" )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra")
include_directories( PRIVATE "${PROJECT_SOURCE_DIR}/src" )
find_package( Threads )

file( GLOB_RECURSE APP_SOURCES RELATIVE "${PROJECT_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}/src/app/*.cpp" )
add_executable( app ${APP_SOURCES} )
target_link_libraries( app ${CMAKE_THREAD_LIBS_INIT} )
